fix double scrollbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,6 @@ html,body
     overflow-x: hidden; 
 }
 
+html, body {
+    overflow: visible;
+}
