--- a/app/assets/stylesheets/create.scss
+++ b/app/assets/stylesheets/create.scss
@@ -33,3 +33,13 @@
     width: 700px;
     height: 700px;
 }
+
+.map-buttons {
+    margin-left: 15%;
+    width: 80px;
+}
+
+.map-buttons-container {
+    display: flex;
+    flex-direction: row;
+}
